# SQLite_interface

./: .gitignore  CMakeLists.txt  Makefile  README.md  Students.db  main.cpp
api/: CMakeLists.txt
api/include/: sqlite_api.hpp
api/src/: sqlite_api.cpp
include/interface/: database.h  database.hpp
